Fix footer margin on mobile screen

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -138,6 +138,7 @@ footer .icon {
     footer {
         padding: 0;
         justify-content: center;
+        margin-top: 13rem;
     }
 }
 
